# Labb2_sorting-algoritm-dt064g

./: CMakeLists.txt  Insertion_sort.cpp  Insertion_sort.h  QuickSort.cpp  QuickSort.h  Quicksort_m3.cpp  Quicksort_m3.h  Selection_sort.cpp  Selection_sort.h  generate_numbers.cpp  generate_numbers.h  main.cpp  plotting.py  time_calc.h
